--- a/OrderManagerApp.WinForms/OrderManagerApp.WinForms.csproj
+++ b/OrderManagerApp.WinForms/OrderManagerApp.WinForms.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OrderManager.Presenter\OrderManagerApp.Presenter.csproj" />
+    <ProjectReference Include="..\OrderManagerApp.Domain\OrderManagerApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
